# rsconnect-python

./: '  .coveragerc  .flake8  .gitignore  .snyk  CHANGELOG.md  CLAUDE.md  CONTRIBUTING  CONTRIBUTING.md  Dockerfile  Jenkinsfile  Justfile  Makefile  NEWS.md  Pipfile  README.md  README_ADMIN.md  ]  build-image  conftest.py  docker-compose.yml  great-docs.yml  mkdocs.yml  publish.Jenkinsfile  pyproject.toml  release.Jenkinsfile  requirements.txt  runtests  setup.cfg  setup.py
.github/: pull_request_template.md
.github/workflows/: deploy_tests.yml  main.yml  nightly.yaml  preview-docs.yml  snyk.yml
docs/: CHANGELOG.md  Dockerfile  Makefile  README.md  build-doc.sh  deploying.md  index.md  mkdocs.yml  patch_admonitions.py  programmatic-provisioning.md  requirements.txt  server-administration.md  style.css
docs/commands/: add.md  bootstrap.md  content.md  deploy.md  details.md  environment.md  info.md  integration.md  list.md  login.md  logout.md  mcp-server.md  quickstart.md  remove.md  system.md  version.md  write-manifest.md
docs/css/: custom.css
docs/deploying/: integration-requests.md
docs/docs/css/: custom.css
docs/overrides/partials/: footer.html  header.html
docs/superpowers/plans/: 2026-06-30-rsconnect-drop-vetiver-baggage.md  2026-06-30-uv-tooling-modernization.md  2026-07-01-great-docs-migration.md
docs/superpowers/specs/: 2026-06-30-uv-tooling-modernization-design.md  2026-07-01-great-docs-migration-design.md
docs/superpowers/spikes/: 2026-07-01-great-docs-findings.md
integration/: jwt_testbed.py
integration-testing/: .gitignore  cypress.config.js  cypress.json  docker-compose.yml  justfile
integration-testing/content/notebook/: README.md  requirements.txt  stock-report-jupyter.ipynb
integration-testing/content/voila/: index.ipynb  requirements.txt
integration-testing/cypress/e2e/: jupyter.cy.js  voila.cy.js
integration-testing/cypress/integration/: jupyter.spec.js
integration-testing/cypress/support/: commands.js
integration-testing/docker/: cli.Dockerfile  client.Dockerfile  connect.Dockerfile  cypress.Dockerfile  requirements.txt  rstudio-connect-cli.gcfg  rstudio-connect.gcfg  windows.Dockerfile
mock_connect/: .gitignore  Dockerfile  Makefile  README.md  data.json  sample.json
mock_connect/mock_connect/: data.py  http_helpers.py  main.py
my-shiny-app/: app.py  manifest.json  requirements.txt
pip-wheel-metadata/rsconnect_python-1.20.1.dev23+g917b738.d20231017.dist-info/: METADATA
pip-wheel-metadata/rsconnect_python.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
pr-preview/pr-546/server-administration/: index.html
pr-preview/pr-664/: 404.html  index.html
pr-preview/pr-664/CHANGELOG/: index.html
pr-preview/pr-665/: 404.html
pr-preview/pr-672/: index.html
pr-preview/pr-680/: 404.html  index.html
pr-preview/pr-687/: 404.html  index.html
pr-preview/pr-688/: index.html
pr-preview/pr-690/: 404.html
pr-preview/pr-698/: 404.html  index.html
pr-preview/pr-700/: 404.html  index.html
pr-preview/pr-701/: index.html
pr-preview/pr-708/: 404.html  Dockerfile  index.html
pr-preview/pr-709/: 404.html  index.html
pr-preview/pr-711/: index.html
pr-preview/pr-712/: 404.html
pr-preview/pr-713/: index.html
pr-preview/pr-718/: 404.html
pr-preview/pr-719/: index.html
pr-preview/pr-724/: 404.html
pr-preview/pr-748/: 404.html
pr-preview/pr-752/: 404.html  index.html
pr-preview/pr-755/: index.html
pr-preview/pr-767/: 404.html  index.html
pr-preview/pr-773/: 404.html  index.html
pr-preview/pr-776/: 404.html  index.html
pr-preview/pr-778/: index.html
pr-preview/pr-805/: 404.html
pr-preview/pr-810/: build-timings.json  changelog.html  changelog.md  contributing.html  contributing.md  index.html  reference-switcher.js  robots.txt  search.json  sitemap.xml  skills.html
rsconnect/: __init__.py  actions.py  actions_content.py  actions_environment.py  actions_integration.py  admin_actions.py  admin_main.py  api.py  bundle.py  certificates.py  environment.py  environment_node.py  environment_r.py  exception.py  git_metadata.py  http_support.py  instrumentation.py  json_web_token.py  log.py  main.py  mcp.py  mcp_deploy_context.py  metadata.py  models.py  oauth.py  pyproject.py  quickstart.py  shiny_express.py  snowflake.py  timeouts.py  utils.py  utils_package.py  validation.py  version.txt  version_check.py
rsconnect/quickstart/: __init__.py  quickstart.py
rsconnect/quickstart_templates/: __init__.py
rsconnect/subprocesses/: environment.py  inspect_environment.py
rsconnect/tests/: test_actions.py  test_api.py  test_bundle.py  test_data_util.py  test_environment.py  test_http_support.py  test_main.py  test_metadata.py  test_models.py
scripts/: backfill_release_notes.py  build-image  install-deps  install-deps-prerelease  runtests  temporary-rename
tests/: _local_run.py  smoke_boot_harness.py  test_Manifest.py  test_actions.py  test_admin_main.py  test_api.py  test_backfill_release_notes.py  test_bundle.py  test_certificates.py  test_deploy_pyproject.py  test_environment.py  test_environment_node.py  test_environment_r.py  test_git_metadata.py  test_http_support.py  test_json_web_token.py  test_main.py  test_main_content.py  test_main_environment.py  test_main_integration.py  test_main_system_caches.py  test_mcp_deploy_context.py  test_metadata.py  test_models.py  test_oauth.py  test_pyproject.py  test_quickstart.py  test_shiny_express.py  test_snowflake.py  test_subprocesses_inspect_environment.py  test_timeouts.py  test_utils.py  test_utils_package.py  test_validation.py  test_version.py  test_version_check.py  test_vetiver_pins.py  test_write_manifest_pyproject.py  utils.py
tests/rsconnect-build-test/: connect_remote_6443.json
tests/target_image/: test.sh
tests/testdata/: secret.key
user_guide/: deploying.qmd  index.qmd  programmatic-provisioning.qmd  server-administration.qmd
vetiver-testing/: vetiver-requirements.txt  wait_for_connect.sh
vetiver-testing/setup-rsconnect/: add-users.sh  dump_api_keys.py  rstudio-connect.gcfg  users.txt
(+776 files in other folders)
