[project]
name = "rsconnect_python"
description = "The Posit Connect command-line interface."

authors = [{ name = "Posit, PBC", email = "rsconnect@posit.co" }]
license = { file = "LICENSE.md" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"

dependencies = [
    "typing-extensions>=4.8.0",
    "pip>=10.0.0",
    "semver>=2.0.0,<4.0.0",
    "pyjwt>=2.4.0",
    "click>=8.0.0",
    "toml>=0.10; python_version < '3.11'",
    "fastmcp==2.12.4"
]

dynamic = ["version"]

[project.scripts]
rsconnect = "rsconnect.main:cli"

[project.optional-dependencies]
test = [
    "black==24.3.0",
    "coverage",
    "flake8-pyproject",
    "flake8",
    "httpretty",
    "ipykernel",
    "nbconvert",
    "pyright",
    "pytest-cov",
    "pytest",
    "setuptools>=61",
    "setuptools_scm[toml]>=3.4",
    "twine",
    "types-Flask",
]
snowflake = ["snowflake-cli"]
docs = [
    "mkdocs-material",
    "mkdocs-click",
    "pymdown-extensions",
    "mkdocs-macros-plugin"
]

[project.urls]
Repository = "http://github.com/posit-dev/rsconnect-python"
Documentation = "https://docs.posit.co/rsconnect-python"

[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=3.4", "wheel"]

[tool.distutils.bdist_wheel]
universal = true

[tool.black]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]

[tool.flake8]
max_line_length = 120
show_source = true
exclude = [".git", ".venv", ".venv2", ".venv3", "__pycache__", ".cache"]

# The following codes are ignored so that `flake8` plays nicer with how `black`
# likes to format:
# - E203: whitespace before ':'
# - E231: missing whitespace after ',', ';', or ':'
# - E302: expected 2 blank lines, found 0
#
# ref:
# https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
#
extend_ignore = ["E203", "E231", "E302"]
per-file-ignores = ["tests/test_metadata.py: E501"]

[tool.setuptools]
packages = ["rsconnect"]

[tool.setuptools_scm]
write_to = "rsconnect/version.py"

[tool.setuptools.package-data]
rsconnect = ["py.typed"]

[tool.pytest.ini_options]
markers = ["vetiver: tests for vetiver"]
addopts = """
    --ignore=tests/testdata
"""

[tool.pyright]
typeCheckingMode = "strict"
reportPrivateUsage = "none"
reportUnnecessaryIsInstance = "none"
reportUnnecessaryComparison = "none"
