[project]
name = "rsconnect_python"
description = "The Posit Connect command-line interface."

authors = [{ name = "Posit, PBC", email = "rsconnect@posit.co" }]
license = { file = "LICENSE.md" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
version = "1.29.1.dev0"

dependencies = [
    "typing-extensions>=4.8.0",
    "pip>=10.0.0",
    "uv>=0.9.0",
    "semver>=2.0.0,<4.0.0",
    "pyjwt>=2.4.0",
    "click>=8.0.0",
    "packaging>=20.0",
    "toml>=0.10; python_version < '3.11'",
]

[project.scripts]
rsconnect = "rsconnect.main:cli"

[project.optional-dependencies]
keyring = ["keyring>=23.0.0"]
snowflake = ["snowflake-cli"]

[dependency-groups]
test = [
    "coverage",
    "httpretty",
    "ipykernel",
    "nbconvert",
    "pytest",
    "pytest-cov",
    "twine",
    "types-Flask",
    "ruff",
    "pyright",
]

[project.urls]
Repository = "http://github.com/posit-dev/rsconnect-python"
Documentation = "https://docs.posit.co/rsconnect-python"

[build-system]
requires = ["uv_build>=0.9.0,<0.13.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "rsconnect"
module-root = ""

[tool.ruff]
line-length = 120
extend-exclude = ["my-shiny-app", "rsconnect-build", "rsconnect-build-test", "integration", "tests/testdata"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E203", "E231", "E302"]
per-file-ignores = { "tests/test_metadata.py" = ["E501"] }

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
markers = []
addopts = """
    --ignore=tests/testdata
"""

[tool.pyright]
typeCheckingMode = "strict"
reportPrivateUsage = "none"
reportUnnecessaryIsInstance = "none"
reportUnnecessaryComparison = "none"
