[bdist_wheel]
universal = 1

[metadata]
author = Michael Marchetti
author_email = mike@posit.co
description = Python integration with Posit Connect
license = GPL-2.0
license_file = LICENSE.md
long_description = file:README.md
long_description_content_type = text/markdown
name = rsconnect_python
url = http://github.com/rstudio/rsconnect-python
project_urls =
    Documentation = https://docs.rstudio.com/rsconnect-python

[options]
install_requires =
    six>=1.14.0
    click>=8.0.0; python_version >= '3.7'
    click>=7.0.0; python_version < '3.6'
    pip>=10.0.0
    semver>=2.0.0,<3.0.0
    pyjwt>=2.4.0; python_version >= '3.6'
    pyjwt; python_version < '3.6'
setup_requires =
    setuptools
    setuptools_scm>=3.4
    toml
    wheel
packages = rsconnect
python_requires = >=3.5
zip_safe = true

[options.entry_points]
console_scripts =
    rsconnect = rsconnect.main:cli
