[bdist_wheel]
universal = 1

[metadata]
author = Michael Marchetti
author_email = mike@posit.co
description = Python integration with Posit Connect
license = GPL-2.0
license_file = LICENSE.md
long_description = file:README.md
long_description_content_type = text/markdown
name = rsconnect_python
url = http://github.com/rstudio/rsconnect-python
project_urls =
    Documentation = https://docs.posit.co/rsconnect-python

[options]
packages = rsconnect
python_requires = >=3.7
zip_safe = true

[options.entry_points]
console_scripts =
    rsconnect = rsconnect.main:cli
